--- a/src/css/NewEmail.css
+++ b/src/css/NewEmail.css
@@ -18,12 +18,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  cursor: pointer;
 }
 .email__body {
   display: flex;
   flex-direction: column;
 }
-.email__body > input, .email__body > textarea {
+.email__body > input,
+.email__body > textarea {
   padding: 10px;
   outline: none;
   border: 1px solid #eee;
@@ -38,7 +40,7 @@
   border: none;
   cursor: pointer;
 }
-.email__body__message{
-    height: 400px;
-    border: none !important;
+.email__body__message {
+  height: 400px;
+  border: none !important;
 }
