--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
-  background: black;
-  /* height: 100%; */
+  background: transparent;
   width: 240px;
+  height: calc(100vh - 60px);
   padding: 20px 20px 20px 0;
 }
 .sidebar__buttons {
@@ -9,9 +9,13 @@
   flex-direction: column;
 }
 .sidebar__compose {
-  padding: 10px 30px;
-  display: flex;
+  width: 150px;
+  color: #3c4043;
+  padding: 0px 30px 0 0;
+  font-size: 14px;
+  font-weight: 500;
   background: #fff;
+  display: flex;
   align-items: center;
   justify-content: space-between;
   border-radius: 30px;
@@ -19,4 +23,6 @@
   cursor: pointer;
   margin-left: 10px;
   margin-bottom: 20px;
+  border: none;
 }
+
